# tetris

./: Cargo.toml  README.md  dependances.md  export_exe.sh  export_executable.sh  export_linux.sh  export_windows_executable.sh  launch_first.sh  launch_two_players.sh  local_ip.txt  local_port.txt  notes.md  remote_ip.txt  save_executable.sh  todonext.md
.github/workflows/: rust.yml
src/: app.rs  assets.rs  basic_player.rs  block.rs  circular_buffer.rs  game_back_end.rs  grid.rs  keyboard.rs  lib.rs  local_player.rs  macros.rs  main.rs  player.rs  player_screen.rs  point.rs  remote.rs  remote_player.rs  render.rs  rotation.rs  settings.rs  tetris_back_end.rs  tetris_grid.rs  tetromino.rs  tetromino_bag.rs  tetromino_kind.rs  translate_rotate.rs  ui.rs  utils.rs
src/app/: player.rs  remote.rs  render_app.rs  update_app.rs
src/app/player/: circular_buffer.rs  handle_key_player.rs  local_player.rs  player_screen.rs  update_player.rs
src/app/remote/: custom_serialize_as_msg.rs  remote_player.rs
src/back_end/: translation_rotation.rs
src/game_back_end/: block.rs  point.rs  render.rs  rotation_state.rs  tetris_grid.rs  tetromino.rs  tetromino_bag.rs  translation_rotation.rs
src/local_player/: keyboard.rs
src/player/: back_end.rs  circular_buffer.rs  handle_key_player.rs  local_player.rs  player_screen.rs  pressed_keys.rs  update_player.rs
src/remote/: custom_serialize_as_msg.rs  message_type.rs  remote_player.rs
src/tetris_back_end/: block.rs  point.rs  render.rs  rotation_state.rs  tetris_grid.rs  tetromino.rs  tetromino_bag.rs  tetromino_kind.rs  translation_rotation.rs
src/ui/: button.rs  interactive_widget_manager.rs  key_input.rs  keybindings.rs  main_menu.rs  render.rs  text.rs  text_input.rs  ui_widget.rs
src/utils/: formattings.rs  macros.rs
(+6 files in other folders)
