[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.128.0"
piston = "0.53.0"
piston2d-graphics = "0.43.0"
pistoncore-glutin_window = "0.71.0"
piston2d-opengl_graphics = "0.82.0"
rand = "0.8.5"
find_folder = "0.3.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_cbor = "0.11.2"
clap = { version = "4.3.0", features = ["derive"] }
