[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.128.0"
piston = "0.53.0"
piston2d-graphics = "0.43.0"
piston2d-opengl_graphics = "0.82.0"
rand = { version = "0.8.5", features = ["serde"] }
find_folder = "0.3.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_cbor = "0.11.2"
rand_pcg = "0.3.1"
local-ip-address = "0.5.4"

[dependencies.pistoncore-glfw_window]
git = "https://github.com/PistonDevelopers/glfw_window"
